# serein

./: Cargo.toml  LICENSE.txt  README.md
derive/: Cargo.toml
derive/src/: choices.rs  command.rs  command_tree.rs  common.rs  lib.rs  subcommand.rs  subsubcommand.rs
macros/: Cargo.toml
macros/src/: choices.rs  command.rs  command_tree.rs  common.rs  lib.rs  subcommand.rs  subsubcommand.rs
src/: error.rs  lib.rs  options.rs  slash.rs
