[workspace]
members = [".", "./derive"]
resolver = "3"

[package]
name = "serein"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serein-derive = { path = "./derive" }
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "rustls_backend"] }
thiserror = "2"
