[package]
name = "serein-derive"
description = "Derive macros for Serein"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
license-file.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.21"
proc-macro2 = "1"
quote = "1"
syn = "2"
